--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KirBotz-Ganteng",
+  "name": "Murias-Drixx",
   "version": "3.0.0",
   "description": "Jangan Ubah Nama Di Atas",
   "main": "index.js",
